added search filter update for search page

--- a/app/blocks/filter-section/filter-section.scss
+++ b/app/blocks/filter-section/filter-section.scss
@@ -383,6 +383,19 @@
           );
         }
       }
+
+      &__filter {
+        @include rule(
+          padding,
+          (
+            sm: 30 37 50,
+          )
+        );
+
+        @include screen("sm", max, 2) {
+          box-sizing: border-box;
+        }
+      }
     }
   }
 }
