--- a/app/pages/newest/search/search-v4.pug
+++ b/app/pages/newest/search/search-v4.pug
@@ -135,18 +135,18 @@ block content
         +e.calendar
           +e.calendar-section.js-inline-datepicker(data-date-format="mm/dd/yy" data-class-list="datepicker_gray" data-datepicker-id="filter")
           +e.calendar-section_time
-            +nd-input()._sm-h50(type="hidden" name="date" value="03/08/2024" data-datepicker-output="filter")
+            +nd-input()._sm-h50(type="hidden" name="date" value="03/08/2024" data-datepicker-output="filter" data-modal-item data-modal-item-type="date")
             +e.calendar-title Select time
             +e.calendar-time
               +nd-form-box('From', 'div')._sm-h50._bg-white
-                +nd-select().js-nd-select(name="startTime" data-choices-classes="nd-choices_sm-h50")
-                  option(placeholder)
+                +nd-select().js-nd-select(name="startTime" data-choices-classes="nd-choices_sm-h50" data-modal-item  data-modal-item-type="date")
+                  option(placeholder value="")
                   each item in ['0:00', '1:00', '2:00', '3:00', '4:00', '5:00', '6:00', '7:00', '8:00', '9:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00', '24:00']
                     option(value=item) #{item}
               +e.calendar-divider
               +nd-form-box('Till', 'div')._sm-h50._bg-white
-                +nd-select().js-nd-select(name="endTime" data-choices-classes="nd-choices_sm-h50")
-                  option(placeholder)
+                +nd-select().js-nd-select(name="endTime" data-choices-classes="nd-choices_sm-h50" data-modal-item  data-modal-item-type="date")
+                  option(placeholder value="")
                   each item in ['0:00', '1:00', '2:00', '3:00', '4:00', '5:00', '6:00', '7:00', '8:00', '9:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00', '24:00']
                     option(value=item) #{item}
 
