--- a/app/blocks/modal-output/modal-output.scss
+++ b/app/blocks/modal-output/modal-output.scss
@@ -604,7 +604,7 @@
         font-weight: 400;
         line-height: (18 / 15);
         width: 100%;
-        text-wrap: nowrap;
+        white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
 
