--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -262,6 +262,7 @@ $nd-color-border7: #ebebec;
 $nd-clear-disabled: #a8b7ba;
 $nd-avatar-text: #7bc0ff;
 $nd-color-date-hover: #e7edef;
+$nd-color-space-booking: #7f8890;
 
 // ##########
 // Transitions
