--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -322,6 +322,126 @@
     }
   }
 
+  &__image-grid {
+    display: grid;
+    grid-template-columns: 216fr 232fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1px;
+    grid-template-areas: "main second" "main third";
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    aspect-ratio: 450 / 233;
+
+    // @include rule(
+    //   grid-template-rows,
+    //   (
+    //     xl: 115px 115px,
+    //     xlg: 115 115,
+    //     lg: 115 115,
+    //     md: 115 115,
+    //     sm: 115 115,
+    //   )
+    // );
+  }
+
+  &__type-label {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    z-index: 3;
+    background: linear-gradient(
+      92.06deg,
+      rgba(199, 214, 225, 0.4) 4.31%,
+      rgba(169, 184, 195, 0.24) 94.17%
+    );
+    color: $nd-color-basic;
+    font-weight: 700;
+    font-family: $font-main;
+
+    @include rule(
+      font-size,
+      (
+        xl: 12px,
+        xlg: 12,
+        lg: 12,
+        md: 12,
+        sm: 12,
+      )
+    );
+
+    @include rule(
+      padding,
+      (
+        xl: 0 10px,
+        xlg: 0 10,
+        lg: 0 10,
+        md: 0 10,
+        sm: 0 10,
+      )
+    );
+
+    @include rule(
+      height,
+      (
+        xl: 20px,
+        xlg: 20,
+        lg: 20,
+        md: 20,
+        sm: 20,
+      )
+    );
+
+    @include rule(
+      border-radius,
+      (
+        xl: 10px,
+        xlg: 10,
+        lg: 10,
+        md: 10,
+        sm: 10,
+      )
+    );
+
+    @include rule(
+      top,
+      (
+        xl: 13px,
+        xlg: 13,
+        lg: 13,
+        md: 13,
+        sm: 13,
+      )
+    );
+    @include rule(
+      left,
+      (
+        xl: 16px,
+        xlg: 16,
+        lg: 16,
+        md: 16,
+        sm: 16,
+      )
+    );
+  }
+
+  &__image-item {
+    position: relative;
+    overflow: hidden;
+
+    &:first-child {
+      grid-row: 1 / 3;
+    }
+
+    img {
+      display: block;
+      font-size: 0;
+      line-height: 0;
+
+      @include fill-img;
+    }
+  }
+
   &__preview {
     position: relative;
     display: block;
@@ -2051,9 +2171,9 @@
           height: 100%;
           text-align: center;
           vertical-align: middle;
-          top: 50%;
+          top: 0;
           right: 0;
-          transform: translate3d(0, -50%, 0);
+          // transform: translate3d(0, -50%, 0);
 
           @include rule(
             width,
@@ -2465,6 +2585,33 @@
         margin-bottom: pxtovw(6, 375);
       }
     }
+
+    &_reverse {
+      flex-direction: row-reverse;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+
+    @include rule(
+      gap,
+      (
+        xl: 15px,
+        xlg: 15,
+        lg: 15,
+        md: 15,
+        sm: 15,
+      )
+    );
+
+    &:last-child {
+      margin-top: auto;
+    }
   }
 
   &__tube {
@@ -2645,6 +2792,166 @@
         background-position: 50% 50%;
         background-image: $icon-small-burger-blue;
       }
+    }
+  }
+
+  &__price {
+    font-weight: 700;
+    line-height: (24 / 20);
+    white-space: nowrap;
+
+    @include rule(
+      font-size,
+      (
+        xl: 20px,
+        xlg: 20,
+        lg: 20,
+        md: 20,
+        sm: 20,
+      )
+    );
+  }
+
+  &__label {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid $nd-color-space-booking;
+    color: $nd-color-space-booking;
+    font-family: $font-stolzl;
+    letter-spacing: -0.02em;
+    line-height: 1.2;
+    box-sizing: border-box;
+    white-space: nowrap;
+
+    @include rule(
+      font-size,
+      (
+        xl: 12px,
+        xlg: 12,
+        lg: 12,
+        md: 12,
+        sm: 12,
+      )
+    );
+
+    @include rule(
+      line-height,
+      (
+        xl: 26px,
+        xlg: 26,
+        lg: 26,
+        md: 26,
+        sm: 26,
+      )
+    );
+
+    @include rule(
+      border-radius,
+      (
+        xl: 16px,
+        xlg: 16,
+        lg: 16,
+        md: 16,
+        sm: 16,
+      )
+    );
+
+    @include rule(
+      height,
+      (
+        xl: 28px,
+        xlg: 28,
+        lg: 28,
+        md: 28,
+        sm: 28,
+      )
+    );
+
+    @include rule(
+      gap,
+      (
+        xl: 5px,
+        xlg: 5,
+        lg: 5,
+        md: 5,
+        sm: 5,
+      )
+    );
+
+    @include rule(
+      padding,
+      (
+        xl: 0 12px,
+        xlg: 0 12,
+        lg: 0 12,
+        md: 0 12,
+        sm: 0 12,
+      )
+    );
+
+    strong,
+    b {
+      font-weight: 700;
+    }
+
+    svg {
+      display: inline-block;
+      stroke: currentColor;
+      fill: transparent;
+      font-size: 0;
+      line-height: 0;
+
+      @include rule(
+        width,
+        (
+          xl: 10,
+          xlg: 10,
+          lg: 10,
+          md: 10,
+          sm: 10,
+        )
+      );
+      @include rule(
+        height,
+        (
+          xl: 13,
+          xlg: 13,
+          lg: 13,
+          md: 13,
+          sm: 13,
+        )
+      );
+    }
+
+    &_gray {
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: normal;
+      color: $nd-color-basic-light;
+      background-color: $nd-color-space-booking;
+
+      @include rule(
+        font-size,
+        (
+          xl: 11px,
+          xlg: 11,
+          lg: 11,
+          md: 11,
+          sm: 11,
+        )
+      );
+
+      @include rule(
+        padding,
+        (
+          xl: 0 12px 0 9px,
+          xlg: 0 12 0 9,
+          lg: 0 12 0 9,
+          md: 0 12 0 9,
+          sm: 0 12 0 9,
+        )
+      );
     }
   }
 
@@ -3245,6 +3552,198 @@
           rgba(0, 0, 0, 0.02),
         pxtovw(2, 375) pxtovw(2, 375) pxtovw(2, 375) rgba(0, 0, 0, 0.04),
         pxtovw(1, 375) pxtovw(1, 375) pxtovw(1, 375) rgba(0, 0, 0, 0.03);
+    }
+  }
+
+  &_result-card {
+    display: flex;
+    flex-direction: column;
+    background-color: $nd-color-basic-light;
+    overflow: hidden;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.02), 2px 2px 2px rgba(0, 0, 0, 0.04),
+      1px 1px 1px rgba(0, 0, 0, 0.03);
+
+    @include rule(
+      border-radius,
+      (
+        xl: 0 0 3px 3px,
+        xlg: 0 0 3 3,
+        lg: 0 0 3 3,
+        md: 0 0 3 3,
+        sm: 0 0 3 3,
+      )
+    );
+
+    @include screen("xlg", max, 2) {
+      box-shadow: pxtovw(3, 1660) pxtovw(3, 1660) pxtovw(3, 1660)
+          rgba(0, 0, 0, 0.02),
+        pxtovw(2, 1660) pxtovw(2, 1660) pxtovw(2, 1660) rgba(0, 0, 0, 0.04),
+        pxtovw(1, 1660) pxtovw(1, 1660) pxtovw(1, 1660) rgba(0, 0, 0, 0.03);
+    }
+
+    @include screen("lg", max, 2) {
+      box-shadow: pxtovw(3, 1366) pxtovw(3, 1366) pxtovw(3, 1366)
+          rgba(0, 0, 0, 0.02),
+        pxtovw(2, 1366) pxtovw(2, 1366) pxtovw(2, 1366) rgba(0, 0, 0, 0.04),
+        pxtovw(1, 1366) pxtovw(1, 1366) pxtovw(1, 1366) rgba(0, 0, 0, 0.03);
+    }
+
+    @include screen("md", max, 2) {
+      box-shadow: pxtovw(3, 960) pxtovw(3, 960) pxtovw(3, 960)
+          rgba(0, 0, 0, 0.02),
+        pxtovw(2, 960) pxtovw(2, 960) pxtovw(2, 960) rgba(0, 0, 0, 0.04),
+        pxtovw(1, 960) pxtovw(1, 960) pxtovw(1, 960) rgba(0, 0, 0, 0.03);
+    }
+
+    @include screen("sm", max, 2) {
+      box-shadow: pxtovw(3, 375) pxtovw(3, 375) pxtovw(3, 375)
+          rgba(0, 0, 0, 0.02),
+        pxtovw(2, 375) pxtovw(2, 375) pxtovw(2, 375) rgba(0, 0, 0, 0.04),
+        pxtovw(1, 375) pxtovw(1, 375) pxtovw(1, 375) rgba(0, 0, 0, 0.03);
+    }
+
+    #{$b} {
+      &__media {
+        position: relative;
+        flex: none;
+      }
+
+      &__type {
+        width: auto;
+        font-family: $font-main;
+        color: $nd-color-gray-text;
+        font-weight: 700;
+        line-height: (15 / 12);
+
+        @include rule(
+          font-size,
+          (
+            xl: 12px,
+            xlg: 12,
+            lg: 12,
+            md: 12,
+            sm: 12,
+          )
+        );
+        &:not(:first-child) {
+          margin-top: 0;
+        }
+      }
+
+      &__top {
+        @include rule(
+          gap,
+          (
+            xl: 8px 15px,
+            xlg: 8 15,
+            lg: 8 15,
+            md: 8 15,
+            sm: 8 15,
+          )
+        );
+
+        flex-wrap: wrap;
+
+        &:not(:last-child) {
+          @include rule(
+            margin-bottom,
+            (
+              xl: 10px,
+              xlg: 10,
+              lg: 10,
+              md: 10,
+              sm: 10,
+            )
+          );
+        }
+      }
+
+      &__title {
+        @include rule(
+          font-size,
+          (
+            xl: 20px,
+            xlg: 20,
+            lg: 20,
+            md: 20,
+            sm: 20,
+          )
+        );
+
+        font-family: $font-main;
+        line-height: (24 / 20);
+
+        &:not(:first-child) {
+          margin-top: 0;
+        }
+
+        &:not(:last-child) {
+          @include rule(
+            margin-bottom,
+            (
+              xl: 15px,
+              xlg: 15,
+              lg: 15,
+              md: 15,
+              sm: 15,
+            )
+          );
+        }
+      }
+
+      &__describe {
+        flex: 1;
+
+        @include rule(
+          padding,
+          (
+            xl: 20px 20px 30px,
+            xlg: 20 20 30,
+            lg: 20 20 30,
+            md: 15 15 20,
+            sm: 15 15 20,
+          )
+        );
+      }
+    }
+
+    .space-type {
+      &__box {
+        @include rule(
+          width,
+          (
+            xl: 9px,
+            xlg: 9,
+            lg: 9,
+            md: 9,
+            sm: 9,
+          )
+        );
+
+        @include rule(
+          height,
+          (
+            xl: 9px,
+            xlg: 9,
+            lg: 9,
+            md: 9,
+            sm: 9,
+          )
+        );
+
+        &:not(:last-child) {
+          @include rule(
+            margin-right,
+            (
+              xl: 6px,
+              xlg: 6,
+              lg: 6,
+              md: 6,
+              sm: 6,
+            )
+          );
+        }
+      }
     }
   }
 }
