--- a/app/pages/newest/single-offer/single-offer-dp-v2.pug
+++ b/app/pages/newest/single-offer/single-offer-dp-v2.pug
@@ -30,8 +30,8 @@ block panels
   +share-popover#share-popover
   +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
     +e.buttons
-      +nd-button._pad10.__button._wide(href="#") Book now
+      +nd-button._pad10.__button._wide.js-nd-popup(href="#nd-popup-booking-form") Book now
 
 block popups
-  +nd-popup-arrange-viewing#nd-popup-arrange-viewing
+  +popup-booking-form#nd-popup-booking-form
   //- +popup-offer-types#popup-offer-types
