--- a/app/blocks/booking-form/booking-form.pug
+++ b/app/blocks/booking-form/booking-form.pug
@@ -34,3 +34,39 @@ mixin booking-form()
     +nd-button._pad10._h50.__button Book now
 
     block
+
+
+mixin booking-form-disabled()
+  +b.FORM.booking-form&attributes(attributes)
+    +e.section
+      +e.title Date and time
+      +e.row
+        +nd-form-box('Date')._sm-h50._bg-white._select
+          +nd-input()._sm-h50.js-datepicker(type="text" name="date" readonly data-date-format="M dd, yyyy" data-class-list="datepicker_popup")
+      +e.row_datetime
+        +nd-form-box('Start time', 'div')._sm-h50._bg-white
+          +nd-select().js-nd-select(name="start" data-choices-classes="nd-choices_sm-h50" disabled)
+            option(placeholder)
+            each item in ['0:00', '1:00', '2:00', '3:00', '4:00', '5:00', '6:00', '7:00', '8:00', '9:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00', '24:00']
+              option(value=item) #{item}
+        +e.divider
+        +nd-form-box('End time', 'div')._sm-h50._bg-white
+          +nd-select().js-nd-select(name="end" data-choices-classes="nd-choices_sm-h50" disabled)
+            option(placeholder)
+            each item in ['0:00', '1:00', '2:00', '3:00', '4:00', '5:00', '6:00', '7:00', '8:00', '9:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00', '24:00']
+              option(value=item) #{item}
+    +e.OUTPUT.section(style="display: none")
+      +e.title Price
+      +e.TABLE.table
+        tbody
+          tr
+            td £149.00 x 3 hours
+            td £447.00
+          tr
+            td Spacepool commission
+            td £17.00
+        tfoot
+          tr
+            td Total:
+            td £ 464.00
+    +nd-button._pad10._h50.__button Book now
