--- a/app/blocks/lists/lists.scss
+++ b/app/blocks/lists/lists.scss
@@ -4,7 +4,7 @@
   li {
     line-height: 1.45;
 
-    @include screen('sm') {
+    @include screen("sm") {
       line-height: 1.2;
     }
   }
@@ -12,7 +12,7 @@
   &_big {
     @include heading-4;
 
-    @include screen('sm') {
+    @include screen("sm") {
       @include text15;
     }
 
@@ -20,14 +20,14 @@
       padding-left: 30px;
       line-height: 1.35;
 
-      @include screen('sm') {
+      @include screen("sm") {
         padding-left: 20px;
       }
 
       &:not(:last-child) {
         margin-bottom: 25px;
 
-        @include screen('sm') {
+        @include screen("sm") {
           margin-bottom: 15px;
         }
       }
@@ -50,19 +50,19 @@ ul.styled-list {
   &:not(:first-child) {
     margin-top: 28px;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       margin-top: pxtovw(28, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       margin-top: pxtovw(28, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       margin-top: pxtovw(28, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       margin-top: pxtovw(28, 375);
     }
   }
@@ -74,7 +74,7 @@ ul.styled-list {
 
     &::before {
       display: inline-block;
-      content: '';
+      content: "";
       background-image: url("data:image/svg+xml,%3Csvg width='12' height='10' viewBox='0 0 12 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 4.76471L4.46154 9L11 1' stroke='%230085FF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
       background-repeat: no-repeat;
       background-size: contain;
@@ -84,25 +84,25 @@ ul.styled-list {
       vertical-align: top;
       margin-right: 15px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         width: pxtovw(12, 1660);
         height: pxtovw(19, 1660);
         margin-right: pxtovw(15, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         width: pxtovw(12, 1366);
         height: pxtovw(19, 1366);
         margin-right: pxtovw(15, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         width: pxtovw(12, 960);
         height: pxtovw(19, 960);
         margin-right: pxtovw(10, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         width: pxtovw(12, 375);
         height: pxtovw(19, 375);
         margin-right: pxtovw(17, 375);
@@ -112,20 +112,104 @@ ul.styled-list {
     &:not(:first-child) {
       margin-top: 15px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-top: pxtovw(15, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-top: pxtovw(15, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-top: pxtovw(10, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-top: pxtovw(14, 375);
+      }
+    }
+
+    .offer-description_v3 & {
+      position: relative;
+
+      @include rule(
+        padding,
+        (
+          xl: 11px 44px 11px 4px,
+          xlg: 11 44 11 4,
+          lg: 11 44 11 4,
+          md: 11 44 11 4,
+          sm: 0,
+        )
+      );
+
+      @include screen("sm", min, 2) {
+        border-bottom: 1px solid $nd-color-border;
+      }
+
+      &::before {
+        @include screen("sm", min, 2) {
+          display: none;
+        }
+      }
+
+      &::after {
+        @include rule(
+          right,
+          (
+            xl: 4px,
+            xlg: 4,
+            lg: 4,
+            md: 4,
+            sm: 0,
+          )
+        );
+
+        @include rule(
+          background-size,
+          (
+            xl: 12 17,
+            xlg: 12 17,
+            lg: 12 17,
+            md: 12 17,
+            sm: 12 17,
+          )
+        );
+
+        @include rule(
+          width,
+          (
+            xl: 40px,
+            xlg: 40,
+            lg: 40,
+            md: 40,
+            sm: 40,
+          )
+        );
+
+        @include screen("sm", min, 2) {
+          position: absolute;
+          top: 0;
+          height: 100%;
+          display: inline-block;
+          content: "";
+          background-image: url("data:image/svg+xml,%3Csvg width='12' height='10' viewBox='0 0 12 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 4.76471L4.46154 9L11 1' stroke='%230085FF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+          background-repeat: no-repeat;
+          background-position: 50% 50%;
+        }
+      }
+
+      &:not(:first-child) {
+        @include rule(
+          margin-top,
+          (
+            xl: 0px,
+            xlg: 0,
+            lg: 0,
+            md: 0,
+            sm: 14,
+          )
+        );
       }
     }
   }
