--- a/app/blocks/offer-description-sidebar/offer-description-sidebar.pug
+++ b/app/blocks/offer-description-sidebar/offer-description-sidebar.pug
@@ -43,3 +43,16 @@ mixin offer-description-sidebar-v2()
         +icon('timer')
         | instant book
     +booking-form.__form
+
+mixin offer-description-sidebar-v2-disabled()
+  +b.offer-description-sidebar._v2&attributes(attributes)
+    +e.header
+      +e.title.nd-hide-from-sm Book Now
+      +e.payment
+        +e.SPAN.price £ 149
+        +e.SPAN.mesure  per hour
+      +e.note Price exclusive VAT / Minimum 2 hours
+      +e.label
+        +icon('timer')
+        | instant book
+    +booking-form-disabled.__form
