--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -1253,6 +1253,7 @@
 
         &_list {
           padding-left: 0;
+          padding-right: 0;
 
           @include cRule(
             order,
@@ -1266,10 +1267,10 @@
           @include rule(
             padding-bottom,
             (
-              xl: 50px,
-              xlg: 50,
-              lg: 50,
-              md: 50,
+              xl: 20px,
+              xlg: 20,
+              lg: 20,
+              md: 20,
               sm: 30,
             )
           );
@@ -1465,10 +1466,10 @@
         @include rule(
           padding,
           (
-            xl: 30px 36px,
-            xlg: 30 36,
-            lg: 30 36,
-            md: 30 36,
+            xl: 60px 36px,
+            xlg: 60 36,
+            lg: 60 36,
+            md: 60 36,
             sm: 25 0,
           )
         );
